hphp/test/slow/inout/bad-call-15.php.expectf

Fatal error: Uncaught exception 'InvalidArgumentException' with message 'Parameters marked inout must be contained in locals, vecs, dicts, keysets, and arrays' in %s/bad-call-15.php:7
Stack trace:
#0 %s/bad-call-15.php(11): Herp->derp()
#1 {main}
